--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
 	"name": "fcc-learn-npm-package-json",
-	"author": "Ducls",
+	"author": "foobar",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js"
+	},
+	"engines": {
+		"node": "8.11.2"
 	},
 	"repository": {
 		"type": "git",
