--- a/package.json
+++ b/package.json
@@ -15,5 +15,6 @@
 		"type": "git",
 		"url": "https://idontknow/todo.git"
 	},
-	"description": "A project that does something awesome hello"
+	"description": "A project that does something awesome hello",
+	"keywords": ["freecodecamp"]
 }
