--- a/package.json
+++ b/package.json
@@ -18,5 +18,6 @@
 	"description": "A project that does something awesome hello",
 	"keywords": ["freecodecamp"],
 	"license": "MIT" ,
-	"version":"1.0.0"
+	"version":"1.0.0",
+	"test":"ok"
 }
