--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
 	"name": "fcc-learn-npm-package-json",
 	"author": "foobar",
-	"dependencies": {
-		"@freecodecamp/example": "^1.2.13"
-	},
+	"dependencies": {},
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js"
