--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
 	"name": "fcc-learn-npm-package-json",
 	"author": "foobar",
-	"dependencies": {},
+	"dependencies": {
+		"@freecodecamp/example": "^1.2.13"
+	},
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js"
